MGDCTRS-257: Explicit set properties in KameletBinding